--- a/Carpool.Api/Carpool.Api.csproj
+++ b/Carpool.Api/Carpool.Api.csproj
@@ -2,12 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Carpool.BLL\Carpool.BLL.csproj" />
+    <ProjectReference Include="..\Carpool.DAL\Carpool.DAL.csproj" />
   </ItemGroup>
 
 </Project>
