--- a/Carpool.BLL/Carpool.BLL.csproj
+++ b/Carpool.BLL/Carpool.BLL.csproj
@@ -3,7 +3,16 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Carpool.DAL\Carpool.DAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\CollegeHandler\" />
+    <Folder Include="Services\ScheduleHandler\" />
+  </ItemGroup>
 
 </Project>
