--- a/Carpool.Api/appsettings.json
+++ b/Carpool.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Redis": "poc-carpool.redis.cache.windows.net:6380,password=bph6ccqBt8746RvqUmbMm3hBpSzm7AUjPAzCaG2bM7M=,ssl=True,abortConnect=False",
+    "CarpoolDatabase": "Server=(localdb)\\carpool; Integrated Security=true; Initial Catalog=Carpool;"
+  }
 }
