--- a/Carpool.Api/appsettings.json
+++ b/Carpool.Api/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Redis": "poc-carpool.redis.cache.windows.net:6380,password=bph6ccqBt8746RvqUmbMm3hBpSzm7AUjPAzCaG2bM7M=,ssl=True,abortConnect=False",
-    "CarpoolDatabase": "Server=(localdb)\\carpool; Integrated Security=true; Initial Catalog=Carpool;"
+    "CarpoolDatabase": "Servertcp:poc-tcc-tads.database.windows.net,1433;Initial Catalog=carpool;Persist Security Info=False;User ID=carpoolpoc;Password=poctcctads-1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
