--- a/Carpool.Api/appsettings.json
+++ b/Carpool.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Redis": "poc-carpool.redis.cache.windows.net:6380,password=bph6ccqBt8746RvqUmbMm3hBpSzm7AUjPAzCaG2bM7M=,ssl=True,abortConnect=False",
-    "CarpoolDatabase": "Server=tcp:poc-tcc-tads.database.windows.net,1433;Initial Catalog=carpool;Persist Security Info=False;User ID=carpoolpoc;Password=poctcctads-1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "Redis": "tccunivan.redis.cache.windows.net:6380,password={},ssl=True,abortConnect=False",
+    "CarpoolDatabase": "Server=tcp:tccunivanfinal.database.windows.net,1433;Initial Catalog=carpool-service;Persist Security Info=False;User ID=tccunivan;Password={};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
