--- a/Carpool.Api/appsettings.json
+++ b/Carpool.Api/appsettings.json
@@ -10,7 +10,7 @@
     "Redis": "tccunivan.redis.cache.windows.net:6380,password={},ssl=True,abortConnect=False",
     "CarpoolDatabase": "Server=tcp:tccunivanfinal.database.windows.net,1433;Initial Catalog=carpool-service;Persist Security Info=False;User ID=tccunivan;Password={};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-  "StudetService" : {
-    "Url": "http://localhost:5000"
+  "UnivanService" : {
+    "Url": "https://localhost:7176/api/"
   }
 }
