--- a/Carpool.Api/appsettings.json
+++ b/Carpool.Api/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Redis": "tccunivan.redis.cache.windows.net:6380,password={},ssl=True,abortConnect=False",
-    "CarpoolDatabase": "Server=tcp:tccunivanfinal.database.windows.net,1433;Initial Catalog=carpool-service;Persist Security Info=False;User ID=tccunivan;Password={};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "CarpoolDatabase": "Server=tcp:tccunivanfinal.database.windows.net,1433;Initial Catalog=carpool-service;Persist Security Info=False;User ID=tccunivan;Password={};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "RabbitMq": ""
   },
   "UnivanService" : {
     "Url": "https://localhost:7176/api/"
