feat: Adjusts carpool flow
- Get ride price in parameters request
- Get more info in basicInfos request

--- a/Carpool.Api/appsettings.json
+++ b/Carpool.Api/appsettings.json
@@ -9,9 +9,12 @@
   "ConnectionStrings": {
     "Redis": "tccunivan.redis.cache.windows.net:6380,password={},ssl=True,abortConnect=False",
     "CarpoolDatabase": "Server=tcp:tccunivanfinal.database.windows.net,1433;Initial Catalog=carpool-service;Persist Security Info=False;User ID=tccunivan;Password={};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "RabbitMq": ""
+    "RabbitMq": "amqp://guest:guest@localhost:5672"
   },
-  "UnivanService" : {
-    "Url": "https://localhost:7176/api/"
+  "UnivanService": {
+    "Url": "http://localhost:5176/api/"
+  },
+  "RouteService": {
+    "Url": "http://localhost:5176/api/"
   }
 }
